--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       padding: 6px 14px;
       font-size: 0.85rem;
     }
+        .t-html{background-color: indigo};
   </style>
 </head>
 <body>
@@ -57,7 +58,7 @@
           <!-- Skills -->
           <h5 class="mt-3 mb-2"><strong>Skills</strong></h5>
           <div class="d-flex flex-wrap gap-2 mb-3">
-            <span class="skill-badge">HTML</span>
+            <span class="skill-badge"t-html>HTML</span>
             <span class="skill-badge">CSS</span>
             <span class="skill-badge">JavaScript</span>
             <span class="skill-badge">Bootstrap</span>
@@ -78,4 +79,5 @@
 
 </body>
 </html>
+
 
