--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <style>
     body {
-      background: #a1caff;
+      background: #f2e1ff;
       color: #333;
     }
     .card {
@@ -79,5 +79,6 @@
 
 </body>
 </html>
+
 
 
